<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rocklinker.UI.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_player"
        android:name="com.rocklinker.UI.Player.PlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.rocklinker.UI.List.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />
</navigation>