<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_up">

            <TextView
                android:id="@+id/itemExternalArtistList_TextView_ArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/artist"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/itemExternalArtistList_ImageView_Art"
                app:layout_constraintTop_toTopOf="@+id/itemExternalArtistList_ImageView_Art" />

            <TextView
                android:id="@+id/itemExternalArtistList_TextView_Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/quantity"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/itemExternalArtistList_ImageView_Art"
                app:layout_constraintTop_toBottomOf="@+id/itemExternalArtistList_TextView_ArtistName" />

            <ImageView
                android:id="@+id/itemExternalArtistList_ImageView_Art"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@mipmap/default_art"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>