<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:background="@color/black_up">

    <TextView
        android:id="@+id/itemInternalMusicList_TextView_MusicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/itemInternalMusicList_ImageView_Art"
        app:layout_constraintTop_toTopOf="@+id/itemInternalMusicList_ImageView_Art" />

    <TextView
        android:id="@+id/itemInternalMusicList_TextView_ArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/artist"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/itemInternalMusicList_ImageView_Art"
        app:layout_constraintTop_toBottomOf="@+id/itemInternalMusicList_TextView_MusicName" />

    <ImageView
        android:id="@+id/itemInternalMusicList_ImageView_Art"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="@mipmap/default_art"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:alpha="0.5"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/itemInternalMusicList_ImageView_Playing"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play_arrow_24"
        android:contentDescription="@string/todo" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/itemInternalMusicList_ImageView_Gif"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.6"
        android:src="@drawable/gif"
        app:layout_constraintBottom_toBottomOf="@+id/itemInternalMusicList_ImageView_Art"
        app:layout_constraintEnd_toEndOf="@+id/itemInternalMusicList_ImageView_Art"
        app:layout_constraintStart_toStartOf="@+id/itemInternalMusicList_ImageView_Art"
        app:layout_constraintTop_toTopOf="@+id/itemInternalMusicList_ImageView_Art" />

</androidx.constraintlayout.widget.ConstraintLayout>